# LLM_AC

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark_results.csv  benchmark_results.json  benchmark_results_2.csv  benchmark_results_2.json  benchmark_results_3.csv  benchmark_results_3.json  benchmark_results_30.csv  benchmark_results_30.json  benchmark_results_smoke.csv  benchmark_results_smoke.json  check.md  docker-compose.yml  gemma_api_key.txt  macro_benchmark_results.csv  macro_benchmark_results.json  marco_benchmark_results_overview.txt  note.md  pyproject.toml  references.md  run.md  sample.md  todolist.md
app/: __init__.py  cache_lookup.py  config.py  dependencies.py  embedding.py  ingestion.py  kpi.py  main.py  mode_manager.py  models.py  observability.py  pipeline.py  rationale.py  routes_access.py  routes_admin.py  routes_health.py  threat_screen.py  ttl.py  validation.py
eval/: analyze_similarity_distribution.py  evaluate_cache_benchmark.py  evaluate_synthetic_cases.py  evaluate_threat_screen.py  generate_cache_benchmark.py  macro_benchmark.py  phase_a_synthetic_cases.jsonl  phase_a_synthetic_cases_summary.json  phase_b_cache_benchmark.csv  phase_b_cache_benchmark.jsonl  phase_b_cache_benchmark_summary.json  phase_c_threat_benchmark.jsonl  phase_c_threat_benchmark_summary.json  plot_ablation_chart.py  plot_latency_chart.py  research_summary.md  run_ablation_study.py  run_threshold_sweep.py
paper/: adbis_paper.md  draft.md  draft.tex
plans/: business.md  data_flow.md  dataflow.md  pipeline_architecture.md  policy_schema.md  vectorDB_schema.md
(+38 files in other folders)
