[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-semantic-acl"
version = "0.1.0"
description = "LLM-based semantic cache access control MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
ml = []
ops = [
  "qdrant-client>=1.7.0",
  "redis>=5.0.0",
  "confluent-kafka>=2.3.0",
]
llm = [
  "openai>=1.35.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workers*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
